--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,14 @@
     <plugins>
 
       <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <configuration>
+          <webXml>web\WEB-INF\web.xml</webXml>
+        </configuration>
+      </plugin>
+
+      <plugin>
         <groupId>com.microsoft.azure</groupId>
         <artifactId>azure-webapp-maven-plugin</artifactId>
         <version>2.2.0</version>
