--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
       <version>4.0.1</version>
       <scope>provided</scope>
     </dependency>
+    <!-- Dipendenza SHA-256 -->
+    <dependency>
+      <groupId>commons-codec</groupId>
+      <artifactId>commons-codec</artifactId>
+      <version>1.11</version>
+    </dependency>
 
     <dependency>
       <groupId>mysql</groupId>
