--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
               <resource>
                 <directory>${project.basedir}/target</directory>
                 <includes>
-                  <include>*.jar</include>
+                  <include>*.war</include>
                 </includes>
               </resource>
             </resources>
