--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.0</version>
         <configuration>
           <webXml>webapp\WEB-INF\web.xml</webXml>
         </configuration>
