--- a/pom.xml
+++ b/pom.xml
@@ -70,7 +70,7 @@
         <configuration>
           <schemaVersion>v2</schemaVersion>
           <subscriptionId>dedd37bc-ba32-4d4a-a782-3585c5ee4bd7</subscriptionId>
-          <resourceGroup>provaProva</resourceGroup>
+          <resourceGroup>RestaurantSuite-Group</resourceGroup>
           <appName>RestaurantSuite</appName>
           <pricingTier>F1</pricingTier>
           <runtime>
