--- a/bot/.env
+++ b/bot/.env
@@ -1,6 +1,6 @@
-MicrosoftAppType=MultiTenant
-MicrosoftAppId=ed61e1a2-542a-4774-9039-903d34289167
-MicrosoftAppPassword=ReastaurantSuite1998
+MicrosoftAppType=
+MicrosoftAppId=
+MicrosoftAppPassword=
 MicrosoftAppTenantId=
 LuisAppId=
 LuisAPIKey=
